--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ html {
 body {
   font-family: "Inter", sans-serif;
   background-color: var(--off-white);
-  height: 100rem;
 }
 
 /* ##############------############## HEADER #######----########## */
@@ -32,7 +31,8 @@ body {
 .header {
   max-width: 120rem;
   margin: 0 auto;
-  padding: 5rem 10rem;
+  padding: 0rem 10rem;
+  padding-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -59,7 +59,7 @@ body {
   row-gap: 6rem;
   grid-template-columns: 1fr auto;
   max-width: 120rem;
-  margin: 0 auto;
+  margin: 5rem auto;
   padding: 0 10rem;
   column-gap: 3rem;
 }
@@ -153,17 +153,17 @@ h1 {
 .cards {
   grid-column: 1/-1;
   display: flex;
-  align-items: center;
-  gap: 6rem;
+  justify-content: space-between;
 }
 
 .card {
   display: flex;
-  max-width: 28rem;
+  max-width: 31rem;
+  gap: 2rem;
 }
 
 .card-img {
-  width: 30%;
+  width: 29%;
   object-fit: cover;
 }
 
@@ -171,7 +171,7 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-width: 20rem;
+  padding-bottom: 1rem;
 }
 
 .card-text span {
@@ -188,6 +188,6 @@ h1 {
 
 .card-text p {
   color: var(--dark-grayish-blue);
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   line-height: 1.6;
 }
