--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ body {
   font-size: 1.5rem;
   display: block;
 }
+.main-nav-bar li a:hover,
+.main-nav-bar li a:active {
+  color: var(--soft-red);
+}
 
 .container {
   display: grid;
@@ -110,6 +114,11 @@ h1 {
   text-transform: uppercase;
 }
 
+.hero-a:hover,
+.hero-a:active {
+  background-color: var(--very-dark-blue);
+}
+
 /* ####--------- ASIDE */
 .aside {
   background-color: var(--very-dark-blue);
@@ -135,6 +144,12 @@ h1 {
   color: var(--off-white);
   font-size: 1.8rem;
   margin-bottom: 1rem;
+  text-decoration: none;
+  display: inline-block;
+  font-weight: 700;
+}
+.aside-card-title:hover {
+  color: var(--soft-orange);
 }
 
 .aside p {
@@ -172,6 +187,7 @@ h1 {
   flex-direction: column;
   gap: 1rem;
   padding-bottom: 1rem;
+  align-items: baseline;
 }
 
 .card-text span {
@@ -180,10 +196,15 @@ h1 {
   color: var(--grayish-blue);
 }
 
-.card-text h3 {
+.card-text-title {
   color: var(--very-dark-blue);
   font-size: 1.6rem;
   font-weight: 800;
+  display: inline-block;
+  text-decoration: none;
+}
+.card-text-title:hover {
+  color: var(--soft-red);
 }
 
 .card-text p {
